# django-allauth-reduced

./: .gitignore  pyproject.toml
allauth/: __init__.py
allauth/allroutes/: README.md  __init__.py  urls.py  views.py
allauth/idp/oidc/internal/: views.py
allauth/socialaccount/providers/: __init__.py
allauth/socialaccount/providers/base/: __init__.py
